# SimpleMemo-T

./: .gitignore  LICENSE  README.md  package-lock.json  package.json
src/: index.html  local_setting.html  main_setting.html  reload_encoding.html  version_window.html
src-tauri/: Cargo.toml  settings.json  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/css/: index.css  main_setting.css
src/js/: index.js  local_setting.js  main_setting.js  reload_encoding.js  shortcut_blocker.js  version_window.js
